<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutiiitm"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_aboutiiitm" />
        <item
            android:id="@+id/nav_academics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_academics" />
        <item
            android:id="@+id/nav_department"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_department" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_people" />
        <item
            android:id="@+id/nav_tnp"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_tnp" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_contactus"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_contactus" />
        </menu>
    </item>

</menu>
